# lukas_chat_bear

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  DASHBOARD_SESSION_FIX.md  DEVELOPMENT.md  MCP_COMMAND_MIGRATION_COMPLETE.md  MCP_FIX_SUMMARY.md  MCP_INTEGRATION_STATUS.md  PROJECT_STRUCTURE.md  README.md  TESTING.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  verify_config.py
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
config/: persona_prompts.yml
dashboard/: .dockerignore  .gitignore  Dockerfile.dashboard  Dockerfile.dev  OAUTH_TESTING_GUIDE.md  README.md  README_TESTS.md  TESTING.md  run-tests.sh  start-dev.sh
dashboard/backend/: app.py  auth.py  config.py  requirements.txt
dashboard/frontend/: index.html  package-lock.json  package.json  playwright.config.js  vite.config.js  vitest.config.js
docker/: Caddyfile  Caddyfile.cloudflare  Caddyfile.dns  Caddyfile.http  Dockerfile  entrypoint.sh  start-bot.sh
docs/: API.md  INDEX.md
migrations/: env.py
migrations/versions/: 20251025_1310_afdcfcbfd9ab_initial_schema_with_all_7_models.py  20251028_2127_d6afc466f142_remove_job_id_unique_constraint_add_job_.py  20251029_1946_0134250f8b22_add_scheduled_events_table.py
scripts/: README.md  test_image_generation_manual.py
specs/001-lukas-bear-chatbot/: data-model.md  plan.md  pyproject.toml.template  quickstart.md  research.md  spec.md  tasks.md
specs/002-web-dashboard/: data-model.md  openapi.yaml  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: bot.py  mcp_server.py  scheduled_tasks.py
src/api/: __init__.py  internal_api.py
src/handlers/: command_handler.py  message_handler.py  (+1 more)
tests/: conftest.py
(+111 files in other folders)
